Swap yes/no options on wantBuild

--- a/method.html
+++ b/method.html
@@ -23,8 +23,8 @@
                 dontStart[do that];
 
                 wantBuild{can you use software<br/>that already exists<br/>without firing<br/>all your staff?}
-                wantBuild-->|no|dontStart
-                wantBuild-->|yes|reallyNeedFix
+                wantBuild-->|yes|dontStart
+                wantBuild-->|no|reallyNeedFix
 
                 reallyNeedFix{are you sure<br/>you need to fix<br/>this problem?}
                 reallyNeedFix-->|yes|haveTeam
